Remove initialize ssh agent in release github action workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,12 @@ jobs:
       - run: |
           git fetch --prune --unshallow
 
-      - name: Install SSH Client 🔑
-        uses: webfactory/ssh-agent@v0.2.0
-        with:
-          ssh-private-key: |
-            ${{ secrets.GH_PAGES_PY_KEY }}
-            ${{ secrets.GH_PAGES_KEY }}
+#      - name: Install SSH Client 🔑
+#        uses: webfactory/ssh-agent@v0.2.0
+#        with:
+#          ssh-private-key: |
+#            ${{ secrets.GH_PAGES_PY_KEY }}
+#            ${{ secrets.GH_PAGES_KEY }}
 
       - name: Cache pip Linux
         uses: actions/cache@v1
