--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,13 +26,6 @@ jobs:
       - run: |
           git fetch --prune --unshallow
 
-#      - name: Install SSH Client 🔑
-#        uses: webfactory/ssh-agent@v0.2.0
-#        with:
-#          ssh-private-key: |
-#            ${{ secrets.GH_PAGES_PY_KEY }}
-#            ${{ secrets.GH_PAGES_KEY }}
-
       - name: Cache pip Linux
         uses: actions/cache@v1
         if: startsWith(runner.os, 'Linux')
@@ -50,6 +43,14 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+
+      - name: ccache cache files
+        uses: actions/cache@v1.1.0
+        with:
+          path: ${{runner.workspace}}/.ccache
+          key: ${{ runner.OS }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
+          restore-keys: |
+            ${{ runner.OS }}-ccache-
 
       - name: Install Dependencies
         run: ./install_dependencies.sh
@@ -84,7 +85,11 @@ jobs:
           $GITHUB_WORKSPACE/tools/genversion.py $GITHUB_WORKSPACE
           cmake -G Ninja $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_ALL_PLUGINS=ON -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON -DWITH_GUI=ON -DBUILD_DOCUMENTATION=ON -DPACKAGE_DEB=OFF -DCMAKE_INSTALL_PREFIX=/usr/
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
+          CCACHE_DIR: ${{runner.workspace}}/.ccache
+          CCACHE_COMPRESS: true
+          CCACHE_COMPRESSLEVEL: 6
+          CCACHE_MAXSIZE: 400M
+
 
       - name: Build Doxygen
         if: startsWith(runner.os, 'Linux')
@@ -96,7 +101,10 @@ jobs:
           cmake --build . --target doc --clean-first --config $BUILD_TYPE
           cp -R documentation/documentation/html/* doc/doc/
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
+          CCACHE_DIR: ${{runner.workspace}}/.ccache
+          CCACHE_COMPRESS: true
+          CCACHE_COMPRESSLEVEL: 6
+          CCACHE_MAXSIZE: 400M
 
       - name: Build Sphinx
         if: startsWith(runner.os, 'Linux')
@@ -108,7 +116,10 @@ jobs:
           cmake --build . --target pydoc --clean-first --config $BUILD_TYPE
           cp -R python-doc/html/* doc/pydoc/
         env:
-          HAL_BASE_PATH: ${{runner.workspace}}/hal/build
+          CCACHE_DIR: ${{runner.workspace}}/.ccache
+          CCACHE_COMPRESS: true
+          CCACHE_COMPRESSLEVEL: 6
+          CCACHE_MAXSIZE: 400M
 
 
       - name: Deploy Doc
