added shortcuts to zoom in the graph view

--- a/defaults/guidefaults.ini
+++ b/defaults/guidefaults.ini
@@ -31,6 +31,8 @@ python_save_file=Ctrl+Shift+S
 python_save_file_as=Ctrl+Alt+S
 searchbar_toggle=Ctrl+F
 schedule_run=Ctrl+Shift+R
+graph_view_zoom_in=Ctrl++
+graph_view_zoom_out=Ctrl+-
 
 [debug]
 grid=false
