added hide_empty_sections setting with a tmp-icon in the settings widget

--- a/defaults/guidefaults.ini
+++ b/defaults/guidefaults.ini
@@ -16,6 +16,9 @@ line_numbers=true
 line_wrap=false
 minimap=true
 
+[selection_details]
+hide_empty_sections=false
+
 [advanced]
 autosave=true
 autosave_interval=60
