--- a/tests/netlist/CMakeLists.txt
+++ b/tests/netlist/CMakeLists.txt
@@ -24,8 +24,8 @@ add_executable(runTest-boolean_function
         boolean_function.cpp)
 add_executable(runTest-gate_library
         gate_library.cpp)
-add_executable(runTest-gate_library_parser_liberty
-        gate_library_parser_liberty.cpp)
+# add_executable(runTest-gate_library_parser_liberty
+#         gate_library_parser_liberty.cpp)
 
 
 target_link_libraries(runTest-netlist    pthread gtest gtest_main hal::core hal::netlist  test_utils)
@@ -40,7 +40,7 @@ target_link_libraries(runTest-gate_library_manager   pthread gtest gtest_main ha
 target_link_libraries(runTest-netlist_serializer   pthread gtest gtest_main hal::core hal::netlist test_utils)
 target_link_libraries(runTest-boolean_function   pthread gtest gtest_main hal::core hal::netlist test_utils)
 target_link_libraries(runTest-gate_library   pthread gtest gtest_main hal::core hal::netlist test_utils)
-target_link_libraries(runTest-gate_library_parser_liberty   pthread gtest gtest_main hal::core hal::netlist test_utils)
+# target_link_libraries(runTest-gate_library_parser_liberty   pthread gtest gtest_main hal::core hal::netlist test_utils)
 
 add_test(runTest-netlist ${CMAKE_BINARY_DIR}/bin/runTest-netlist --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-gate ${CMAKE_BINARY_DIR}/bin/runTest-gate --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
@@ -54,5 +54,5 @@ add_test(runTest-gate_library_manager ${CMAKE_BINARY_DIR}/bin/runTest-gate_libra
 add_test(runTest-netlist_serializer ${CMAKE_BINARY_DIR}/bin/runTest-netlist_serializer --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-boolean_function ${CMAKE_BINARY_DIR}/bin/runTest-boolean_function --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-gate_library ${CMAKE_BINARY_DIR}/bin/runTest-gate_library --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
-add_test(runTest-gate_library_parser_liberty ${CMAKE_BINARY_DIR}/bin/runTest-gate_library_parser_liberty --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
+# add_test(runTest-gate_library_parser_liberty ${CMAKE_BINARY_DIR}/bin/runTest-gate_library_parser_liberty --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 
