--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -57,3 +57,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TMP_RUNTIME_OUTPUT_DIR})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${TMP_ARCHIVE_OUTPUT_DIR})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${TMP_ARCHIVE_OUTPUT_DIR_DEBUG})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${TMP_ARCHIVE_OUTPUT_DIR})
+
+if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+add_sanitizers(runTest-callback_hook)
+add_sanitizers(runTest-log)
+add_sanitizers(runTest-program_arguments)
+add_sanitizers(runTest-program_options)
+add_sanitizers(runTest-utils)
+add_sanitizers(runTest-plugin_manager)
+endif()
