--- a/plugins/vhdl_verilog_parsers/test/CMakeLists.txt
+++ b/plugins/vhdl_verilog_parsers/test/CMakeLists.txt
@@ -4,8 +4,8 @@ if(BUILD_TESTS)
     add_executable(runTest-hdl_parser_verilog  hdl_parser_verilog.cpp)
     add_executable(runTest-hdl_parser_vhdl  hdl_parser_vhdl.cpp)
 
-    target_link_libraries(runTest-hdl_parser_verilog   vhdl_verilog_parsers pthread gtest gtest_main hal::core hal::netlist test_utils)
-    target_link_libraries(runTest-hdl_parser_vhdl  vhdl_verilog_parsers pthread gtest gtest_main hal::core hal::netlist test_utils)
+    target_link_libraries(runTest-hdl_parser_verilog   vhdl_verilog_parsers pthread gtest hal::core hal::netlist test_utils)
+    target_link_libraries(runTest-hdl_parser_vhdl  vhdl_verilog_parsers pthread gtest hal::core hal::netlist test_utils)
 
     add_test(runTest-hdl_parser_verilog ${CMAKE_BINARY_DIR}/bin/hal_plugins/runTest-hdl_parser_verilog --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
     add_test(runTest-hdl_parser_vhdl ${CMAKE_BINARY_DIR}/bin/hal_plugins/runTest-hdl_parser_vhdl --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
