fix sphinx python doc.
this also fixes the endless loop in hal::utils::get_base_directory() that prevented sphinx from generating the docs.
the doc for graph algorithm are currently empty because MR #283 disabled its python bindings.

--- a/documentation/sphinx_doc/conf.py.in
+++ b/documentation/sphinx_doc/conf.py.in
@@ -20,8 +20,10 @@
 import os
 import sys
 
-sys.path.insert(0, os.path.abspath('@CMAKE_CURRENT_BINARY_DIR@/lib'))
 sys.path.insert(0, os.path.abspath('@CMAKE_BINARY_DIR@/lib'))
+sys.path.insert(0, os.path.abspath('@CMAKE_BINARY_DIR@/lib/hal_plugins'))
+
+os.environ['HAL_BASE_PATH'] = '@CMAKE_BINARY_DIR@'
 
 # -- General configuration ------------------------------------------------
 
