--- a/plugins/netlist_simulator/CMakeLists.txt
+++ b/plugins/netlist_simulator/CMakeLists.txt
@@ -1,5 +1,7 @@
-option(PL_NETLIST_SIMULATOR "PL_NETLIST_SIMULATOR" OFF)
+option(PL_NETLIST_SIMULATOR "PL_NETLIST_SIMULATOR" ON)
+
 if(PL_NETLIST_SIMULATOR OR BUILD_ALL_PLUGINS)
+
     file(GLOB_RECURSE NETLIST_SIMULATOR_INC ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
     file(GLOB_RECURSE NETLIST_SIMULATOR_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
     file(GLOB_RECURSE NETLIST_SIMULATOR_PYTHON_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)
@@ -15,4 +17,5 @@ if(PL_NETLIST_SIMULATOR OR BUILD_ALL_PLUGINS)
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         add_sanitizers(netlist_simulator)
     endif()
+    
 endif()
