--- a/plugins/gui/defaults/guidefaults.ini
+++ b/plugins/gui/defaults/guidefaults.ini
@@ -2,7 +2,8 @@
 drag_mode_modifier=134217728
 grid_type=lines
 move_modifier=33554432
-layout_algorithm=true
+layout_boxes=true
+layout_nets=true
 
 [main_style]
 theme=darcula
