--- a/tests/netlist/CMakeLists.txt
+++ b/tests/netlist/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(runTest-net net.cpp)
 add_executable(runTest-data_container data_container.cpp)
 add_executable(runTest-endpoint endpoint.cpp)
 add_executable(runTest-module module.cpp)
+add_executable(runTest-grouping grouping.cpp)
 add_executable(runTest-netlist_factory netlist_factory.cpp)
 add_executable(runTest-gate_library_manager gate_library_manager.cpp)
 add_executable(runTest-netlist_serializer netlist_serializer.cpp)
@@ -18,6 +19,7 @@ target_link_libraries(runTest-net    pthread gtest hal::core hal::netlist test_u
 target_link_libraries(runTest-data_container    pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-endpoint   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-module   pthread gtest hal::core hal::netlist test_utils)
+target_link_libraries(runTest-grouping   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-netlist_factory   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-gate_library_manager   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-netlist_serializer   pthread gtest hal::core hal::netlist test_utils)
@@ -30,6 +32,7 @@ add_test(runTest-net ${CMAKE_BINARY_DIR}/bin/runTest-net --gtest_output=xml:${CM
 add_test(runTest-data_container ${CMAKE_BINARY_DIR}/bin/runTest-data_container --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-endpoint ${CMAKE_BINARY_DIR}/bin/runTest-endpoint --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-module ${CMAKE_BINARY_DIR}/bin/runTest-module --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
+add_test(runTest-grouping ${CMAKE_BINARY_DIR}/bin/runTest-grouping --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-netlist_factory ${CMAKE_BINARY_DIR}/bin/runTest-netlist_factory --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-gate_library_manager ${CMAKE_BINARY_DIR}/bin/runTest-gate_library_manager --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-netlist_serializer ${CMAKE_BINARY_DIR}/bin/runTest-netlist_serializer --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
@@ -45,6 +48,7 @@ add_sanitizers(runTest-data_container)
 add_sanitizers(runTest-endpoint)
 #add_sanitizers(runTest-netlist_internal_manager)
 add_sanitizers(runTest-module)
+add_sanitizers(runTest-grouping)
 add_sanitizers(runTest-netlist_factory)
 add_sanitizers(runTest-gate_library_manager)
 add_sanitizers(runTest-netlist_serializer)
