Added modularized python documentation build system

--- a/plugins/netlist_simulator/CMakeLists.txt
+++ b/plugins/netlist_simulator/CMakeLists.txt
@@ -7,10 +7,10 @@ if(PL_NETLIST_SIMULATOR OR BUILD_ALL_PLUGINS)
     file(GLOB_RECURSE NETLIST_SIMULATOR_PYTHON_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)
 
     hal_add_plugin(netlist_simulator
-                   SHARED
+                   SHARED PYDOC
                    HEADER ${NETLIST_SIMULATOR_INC}
                    SOURCES ${NETLIST_SIMULATOR_SRC} ${NETLIST_SIMULATOR_PYTHON_SRC}
-                   )
+                   SPHINX_DOC_INDEX_FILE ${CMAKE_CURRENT_SOURCE_DIR}/documentation/netlist_simulator.rst)
 
     add_subdirectory(test)
 
