--- a/plugins/netlist_simulator/CMakeLists.txt
+++ b/plugins/netlist_simulator/CMakeLists.txt
@@ -1,4 +1,4 @@
-option(PL_NETLIST_SIMULATOR "PL_NETLIST_SIMULATOR" ON)
+option(PL_NETLIST_SIMULATOR "PL_NETLIST_SIMULATOR" OFF)
 
 if(PL_NETLIST_SIMULATOR OR BUILD_ALL_PLUGINS)
 
