--- a/plugins/gui/defaults/guidefaults.ini
+++ b/plugins/gui/defaults/guidefaults.ini
@@ -16,7 +16,7 @@ font_size=11
 highlight_current_line=true
 line_numbers=true
 line_wrap=false
-minimap=true
+minimap=false
 
 [selection_details]
 hide_empty_sections=false
