--- a/tests/netlist/CMakeLists.txt
+++ b/tests/netlist/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(runTest-endpoint endpoint.cpp)
 add_executable(runTest-module module.cpp)
 add_executable(runTest-grouping grouping.cpp)
 add_executable(runTest-netlist_factory netlist_factory.cpp)
-add_executable(runTest-gate_library_parser_manager gate_library_parser_manager.cpp)
+add_executable(runTest-gate_library_manager gate_library_manager.cpp)
 add_executable(runTest-netlist_serializer netlist_serializer.cpp)
 add_executable(runTest-boolean_function boolean_function.cpp)
 add_executable(runTest-gate_library gate_library.cpp)
@@ -22,7 +22,7 @@ target_link_libraries(runTest-endpoint   pthread gtest hal::core hal::netlist te
 target_link_libraries(runTest-module   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-grouping   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-netlist_factory   pthread gtest hal::core hal::netlist test_utils)
-target_link_libraries(runTest-gate_library_parser_manager   pthread gtest hal::core hal::netlist test_utils)
+target_link_libraries(runTest-gate_library_manager   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-netlist_serializer   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-boolean_function   pthread gtest hal::core hal::netlist test_utils)
 target_link_libraries(runTest-gate_library   pthread gtest hal::core hal::netlist test_utils)
@@ -36,7 +36,7 @@ add_test(runTest-endpoint ${CMAKE_BINARY_DIR}/bin/runTest-endpoint --gtest_outpu
 add_test(runTest-module ${CMAKE_BINARY_DIR}/bin/runTest-module --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-grouping ${CMAKE_BINARY_DIR}/bin/runTest-grouping --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-netlist_factory ${CMAKE_BINARY_DIR}/bin/runTest-netlist_factory --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
-add_test(runTest-gate_library_parser_manager ${CMAKE_BINARY_DIR}/bin/runTest-gate_library_parser_manager --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
+add_test(runTest-gate_library_manager ${CMAKE_BINARY_DIR}/bin/runTest-gate_library_manager --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-netlist_serializer ${CMAKE_BINARY_DIR}/bin/runTest-netlist_serializer --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-boolean_function ${CMAKE_BINARY_DIR}/bin/runTest-boolean_function --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 add_test(runTest-gate_library ${CMAKE_BINARY_DIR}/bin/runTest-gate_library --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
@@ -52,7 +52,7 @@ add_sanitizers(runTest-endpoint)
 add_sanitizers(runTest-module)
 add_sanitizers(runTest-grouping)
 add_sanitizers(runTest-netlist_factory)
-add_sanitizers(runTest-gate_library_parser_manager)
+add_sanitizers(runTest-gate_library_manager)
 add_sanitizers(runTest-netlist_serializer)
 add_sanitizers(runTest-boolean_function)
 add_sanitizers(runTest-gate_library)
