enabled parser manager tests again

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,5 +31,5 @@ endif()
 add_subdirectory(test_utils)
 add_subdirectory(core)
 add_subdirectory(netlist)
-#add_subdirectory(hdl_parser) # TODO: reactivate / move hdl_parser_manager up in hierarchy
+add_subdirectory(hdl_parser)
 add_subdirectory(hdl_writer)
