--- a/plugins/.gitignore
+++ b/plugins/.gitignore
@@ -13,6 +13,8 @@
 !liberty_parser/**/*
 !hgl_parser*
 !hgl_parser/**/*
+!hgl_writer*
+!hgl_writer/**/*
 !netlist_simulator*
 !netlist_simulator/**/*
 !python_shell*
