--- a/plugins/hgl_writer/CMakeLists.txt
+++ b/plugins/hgl_writer/CMakeLists.txt
@@ -1,5 +1,5 @@
 option(PL_HGL_WRITER "PL_HGL_WRITER" ON)
-if(PL_HGL_PARSER OR BUILD_ALL_PLUGINS)
+if(PL_HGL_WRITER OR BUILD_ALL_PLUGINS)
     file(GLOB_RECURSE HGL_WRITER_INC ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
     file(GLOB_RECURSE HGL_WRITER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
