make all tests pass

--- a/plugins/hgl_writer/test/CMakeLists.txt
+++ b/plugins/hgl_writer/test/CMakeLists.txt
@@ -1,9 +1,11 @@
 if(BUILD_TESTS)
+    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin/hal_plugins/test-files/hgl_writer)
+
     include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/tests ${CMAKE_SOURCE_DIR}/plugins/hgl_writer/include)
 
     add_executable(runTest-hgl_writer  hgl_writer.cpp)
 
-    target_link_libraries(runTest-hgl_writer   hgl_writer pthread gtest gtest_main hal::core hal::netlist test_utils)
+    target_link_libraries(runTest-hgl_writer hgl_writer hgl_parser pthread gtest gtest_main hal::core hal::netlist test_utils)
 
     add_test(runTest-hgl_writer ${CMAKE_BINARY_DIR}/bin/hal_plugins/runTest-hgl_writer --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
 
