moved the solve_fsm plugin and created the z3_utils plugin.

--- a/plugins/.gitignore
+++ b/plugins/.gitignore
@@ -19,9 +19,13 @@
 !netlist_simulator/**/*
 !python_shell*
 !python_shell/**/*
+!solve_fsm*
+!solve_fsm/**/*
 !vhdl_verilog_parsers*
 !vhdl_verilog_parsers/**/*
 !vhdl_verilog_writers*
 !vhdl_verilog_writers/**/*
+!z3_utils*
+!z3_utils/**/*
 !CMakeLists.txt
 !.gitignore
