--- a/plugins/dataflow_analysis/CMakeLists.txt
+++ b/plugins/dataflow_analysis/CMakeLists.txt
@@ -20,6 +20,7 @@ if(PL_DATAFLOW OR BUILD_ALL_PLUGINS)
                    INCLUDES PUBLIC $<BUILD_INTERFACE:${IGRAPH_INCLUDES}>
                    DEFINITIONS PUBLIC -DIGRAPH_VERSION_MAJOR_GUESS=${IGRAPH_VERSION_MAJOR_GUESS} -DIGRAPH_VERSION_MINOR_GUESS=${IGRAPH_VERSION_MINOR_GUESS} -DIGRAPH_VERSION_PATCH_GUESS=${IGRAPH_VERSION_PATCH_GUESS}
                    LINK_LIBRARIES PUBLIC ${IGRAPH_LIBRARIES} graph_algorithm
+                   PYDOC SPHINX_DOC_INDEX_FILE ${CMAKE_CURRENT_SOURCE_DIR}/documentation/dataflow.rst
                    )
 
 endif()
